# practice_terraform

./: .gitignore  README.md  pyproject.toml
01_practice_docker/: README.md
02_practice_ec2/: README.md  private.tf  security_groups.tf  variables.tf  vastion.tf  vpc.tf
02_practice_ec2/env/dev/: dev.tfvars  main.tf  variables.tf
03_terraform_backend/env/dev/: README.md  main.tf
